--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>React Training</title>
         <link rel="stylesheet" type="text/css" href="/index.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+          crossorigin="anonymous"> 
     </head>
     <body>
         <div id="appRoot"></div>
